Use modern CMake to find SFML
Cherry-picked from thelaui 5789fafd3fad12ce2071a6350f595c433afa853d

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,7 +52,7 @@ endif(APPLE)
 target_link_libraries(
 	marsshooter
 		${FOUNDATION_LIBRARY}
-		${SFML_LIBRARIES}
+		sfml-graphics sfml-audio
 		${OPENGL_LIBRARIES}
 		${XRANDR_LIBRARY}
 		${FRIBIDI_LIBRARY}
