Fix build for Windows
Cherry-picked from thelaui f719734db73da7696fae10a4621736d65b4ca1e5

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,9 @@
 # Actually compile the executable
 #####################################################################
 
+# required for M_PI on some platforms
+add_definitions(-D_USE_MATH_DEFINES)
+
 # determine source and header files
 file(GLOB MARS_SOURCES */*.cpp)
 file(GLOB MARS_HEADERS ${MARS_SOURCE_DIR}/include/*/*.hpp ${MARS_SOURCE_DIR}/include/*.hpp)
