Replace all occurences of www.marsshooter.org with mars-game.sourceforge.net
The marsshooter.org domain has been taken over by a 3th party and is
filled with spam now. Replace all occurences with mars-game.sourceforge.net,
as was already done in README.md a while ago.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(mars_MINOR 7)
 set(mars_PATCH 5)
 set(mars_VERSION ${mars_MAJOR}.${mars_MINOR}.${mars_PATCH})
 set(mars_DESCRIPTION "M.A.R.S. - a ridiculous Shooter")
-set(mars_HOMEPAGE "http://www.marsshooter.org")
+set(mars_HOMEPAGE "http://mars-game.sourceforge.net")
 set(mars_EXENAME "marsshooter")
 set(mars_PACKAGENAME "mars")
  
